# parallel-simulation

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md  hosts.txt
.beads/: issues.jsonl
.github/workflows/: build.yml
docker/: Dockerfile.phasegap  docker-compose.mpi.yml  mpi_worker_entrypoint.sh
docs/: cheat_sheet.md  methodology.md
include/phasegap/: cli.hpp
include/phasegap/kernels/: kernels.hpp
include/phasegap/mpi/: ring_halo.hpp
include/phasegap/stats/: checksum.hpp  csv.hpp  manifest.hpp  metrics.hpp  timer.hpp
include/phasegap/trace/: writer.hpp
scripts/: analyze.py  analyze_multihost.py  analyze_multihost_netem.py  check_metrics.py  docker_mpi_compose.sh  docker_netem_smoke.sh  netem_off.sh  netem_on.sh  phasegap_tui.sh  quality_gate.sh  result1.csv  run_docker_rank_sweep.sh  run_matrix.sh  run_multihost_scenarios.sh  smoke_build.sh
scripts/dev/: configure-macos-openmp.sh
src/: main.cpp
src/cli/: cli.cpp
src/kernels/: kernels.cpp
src/mpi/: ring_halo.cpp
src/stats/: checksum.cpp  csv.cpp  manifest.cpp  metrics.cpp  timer.cpp
src/trace/: writer.cpp
